# controllers/posts.js
@@ -21,6 +21,25 @@ const findById =async (req, res) => {
         res.status(500).json(err);
     }
 }
+
+const update = async (req, res)=>{
+    try{
+        const post = await Post.findById(req.params.id);
+        if(post.username=== req.body.username ){
+            try{
+                const updatedPost = await Post.findByIdAndUpdate(req.params.id, {$set:req.body},{new:true});
+                res.status(200).json(updatedPost);
+            }catch(err){
+                res.status(500).json(err);
+            }
+        }else{
+            res.status(401).json("You can only update your own posts.")
+        }
+    }catch(err){
+        res.status(500).json(err);
+    }
+}
+
 const deleteP = async (req, res)=>{
     try{
         const post = await Post.findById(req.params.id);
@@ -47,4 +66,4 @@ const findAll =async (req, res) => {
     }
 }
 
-module.exports = {add, findById, findAll, deleteP}
+module.exports = {add, findById, findAll, deleteP, update}
